updated after code review.

--- a/pom.xml
+++ b/pom.xml
@@ -9,35 +9,39 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <mysql.connector.java.version>8.0.27</mysql.connector.java.version>
+        <junit.jupiter.version> 5.8.2</junit.jupiter.version>
+        <mockito.junit.jupiter>4.2.0</mockito.junit.jupiter>
+        <liquibase.version>4.7.1</liquibase.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.8.2</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.27</version>
+            <version>${mysql.connector.java.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.2.0</version>
+            <version>${mockito.junit.jupiter}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.7.1</version>
+            <version>${liquibase.version}</version>
         </dependency>
 
     </dependencies>
@@ -47,12 +51,11 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.7.1</version>
+                <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>src/main/resources/liquibase.properties</propertyFile>
                     <changeLogFile>src/main/resources/dbChangeLog.xml</changeLogFile>
                     <outputChangeLogFile>src/main/resources/outDBChangeLog.xml</outputChangeLogFile>
-
                 </configuration>
             </plugin>
         </plugins>
