--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
 changeLogFile= src/main/resources/dbchangelog.xml
-url= jdbc:mysql://localhost/task_schema?
+url= jdbc:mysql://localhost/task_schema
 username= root
 password= root
